[package]
name = "backtrace-string"
description = "Returns a backtrace as a string."
version = "0.1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>", "Philipp Korber <p.korber@dac.eu>"]
edition = "2018"
readme = "README.md"

[dependencies]
backtrace = "0.3.32"
rustc-demangle = "0.1.15"


[dev-dependencies]
lazy_static = "1.3.0"